# mlda

./: README.md  intro.md  pyproject.toml  requirements.txt  tmux.conf
.jupyter/lab/user-settings/@jupyterlab/filebrowser-extension/: browser.jupyterlab-settings
.jupyter/lab/user-settings/@jupyterlab/fileeditor-extension/: plugin.jupyterlab-settings
.jupyter/lab/user-settings/@jupyterlab/notebook-extension/: tracker.jupyterlab-settings
.jupyter/lab/user-settings/@jupyterlab/toc-extension/: registry.jupyterlab-settings
.jupyter/lab/user-settings/@jupyterlab/translation-extension/: plugin.jupyterlab-settings
.jupyter/lab/user-settings/jupyterlab-jupytext/: plugin.jupyterlab-settings
.jupyter/lab/user-settings/jupyterlab-rise/: plugin.jupyterlab-settings
datasets/: moscow_cities.csv
exam/: questions.md  tasks.md
labs/lab_01/: lab_01.md  podkolodnyi_lab_1.ipynb
labs/lab_02/: lab_02.md
labs/lab_03/: lab_03.md
labs/lab_03/data/: .~lock.lab01_train.csv#  duplicate_sets_of_courses_with_number_students.csv  lab01_train.csv  lab01_train_check.csv
labs/lab_04/: lab_04.md
labs/lab_05/: lab_05.md
labs/lab_05/data/: data_set_description.csv
labs/lab_06/: lab_06.md
labs/lab_07/: lab_07.md
labs/lab_08/: lab_08.md
labs/lab_09/: lab_09.md
labs/lab_10/: lab_10.md
labs/lab_11/: lab_11.md
labs/lab_17/: lab_17.md
labs/lab_18/: lab_18.md
labs/lab_19/: lab_19.md
labs/lab_20/: lab_20.md
labs/lab_21/: lab_21.md
labs/lab_22/: lab_22.md
labs/lab_23/: lab_23.md
labs/lab_24/: lab_24.md
labs/lab_25/: lab_25.md
labs/lab_26/: lab_26.md
lectures/lecture_01/: lecture_01.md
lectures/lecture_02/: lecture_02.md
lectures/lecture_03/: lecture_03.md
lectures/lecture_04/: lecture_04.md
lectures/lecture_06/: lecture_06.md
lectures/lecture_07/: lecture_07.md
lectures/lecture_08/: lecture_08.md
lectures/lecture_09/: lecture_09.md
lectures/lecture_10/: lecture_10.md
lectures/lecture_11/: lecture_11.md
lectures/lecture_12/: lecture_12.md
lectures/lecture_13/: lecture_13.md
lectures/lecture_14/: lecture_14.md
lectures/lecture_15/: lecture_15.md
lectures/lecture_16/: lecture_16.md
lectures/lecture_17/: lecture_17.md
lectures/lecture_18/: lecture_18.md
lectures/lecture_19/: lecture_19.md
lectures/lecture_20/: lecture_20.md
lectures/lecture_21/: lecture_21.md
lectures/lecture_22/: lecture_22.md  lecture_22.qmd
lectures/lecture_23/: lecture_23.md
lectures/lecture_24/: lecture_24.qmd
lectures/lecture_25/: lecture_25.qmd
lectures/lecture_26/: lecture_26.qmd
lectures/lecture_27/: lecture_27.qmd
lesson_01/: lecture_01.md
projects/: project_topics.csv  projects.md
projects/example/: example.md
seminars/seminar_01/: numpy_08_sorting.md  weather_moscow_2023.csv
seminars/seminar_02/: matplotlib_00_introduction_to_matplotlib.md  matplotlib_01_simple_line_plots.md  matplotlib_02_simple_scatter_plots.md  matplotlib_04_density_and_contour_plots.md  matplotlib_05_histograms_and_binnings.md  matplotlib_07_customizing_colorbars.md  matplotlib_08_multiple_subplots.md  matplotlib_11_settings_and_stylesheets.md  matplotlib_13_geographic_data_with_basemap.md  matplotlib_15_further_resources.md
seminars/seminar_03/: pandas_02_data_indexing_and_selection.md  pandas_03_operations_in_pandas.md  pandas_04_missing_values.md  pandas_05_hierarchical_indexing.md  pandas_06_concat_and_append.md  pandas_07_merge_and_join.md  pandas_08_aggregation_and_grouping.md  pandas_09_pivot_tables.md  pandas_10_working_with_strings.md  pandas_11_working_with_time_series.md  pandas_12_performance_eval_and_query.md  pandas_13_further_resources.md
seminars/seminar_keras/: keras_00_intro.md  keras_01_example.md
seminars/seminar_matplotlib/: matplotlib_03_errorbars.md  matplotlib_06_legends.md  matplotlib_09_text_and_annotation.md  matplotlib_10_customizing_ticks.md  matplotlib_12_three_dimensional_plotting.md  matplotlib_14_visualization_with_seaborn.md
seminars/seminar_numpy/: numpy_00_introduction_to_numpy.md  numpy_01_data_types.md  numpy_02_the_basics_of_numpy_arrays.md  numpy_03_computation_on_arrays_ufuncs.md  numpy_04_computation_on_arrays_aggregates.md  numpy_05_computation_on_arrays_broadcasting.md  numpy_06_boolean_arrays_and_masks.md  numpy_07_fancy_indexing.md  numpy_09_structured_data_numpy.md
seminars/seminar_pandas/: pandas_00_introduction_to_pandas.md  pandas_01_introducing_pandas_objects.md  pandas_06_concat_and_append.md  pandas_07_merge_and_join.md  pandas_09_pivot_tables.md  pandas_10_working_with_strings.md  pandas_11_working_with_time_series.md  pandas_12_performance_eval_and_query.md
