[tool.poetry]
name = "bmstu_machinelearning"
version = "2024.09"
description = "Алгоритмы и структуры данных"
authors = ["askras <askrasnikov@gmail.com>"]
license = "CC BY 4.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ipython = "^8.27.0"
ipympl = "^0.9.4"
jupyterlab = "^4.2.5"
jupyterlab-rise = "^0.42.0"
jupytext = "^1.16.4"
matplotlib = "^3.9.2"
mglearn = "^0.2.0"
notebook = "^7.2.2"
numexpr = "^2.10.1"
numpy = "^2.1.1"
openml = "^0.14.2"
pandas = "^2.2.2"
pandas-datareader = "^0.10.0"
plotly = "^5.24.1"
scikit-learn = "^1.5.1"
seaborn = "^0.13.2"
tqdm = "^4.66.5"

[tool.poetry.group.dev.dependencies]
poetry-exec-plugin = "^0.3.6"
spyder = "^6.0.1"
spyder-line-profiler = "^0.4.0"
spyder-notebook = "^0.6.1"
#spyder-terminal = "^1.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry-exec-plugin.commands]

spyder = """
spyder --workdir=./ --window-title bmstu_machinelearning --project ./ --conf-dir ./.config/spyder-py3
"""

freeze = "poetry export --format requirements.txt --output requirements.txt --without-hashes"

jupyter = """
export JUPYTERLAB_SETTINGS_DIR=./.jupyterlab_config/user-settings
export JUPYTERLAB_WORKSPACES_DIR=./.jupyterlab_config/workspaces
python -m jupyter lab --allow-root --NotebookApp.token='' --NotebookApp.password=''
"""

#======================================================================================================================
# Jupytext: Jupyter notebooks as Markdown documents, Julia, Python or R scripts
# https://github.com/mwouts/jupytext
#======================================================================================================================
[tool.jupytext]
#notebook_extensions = "md"
formats = "ipynb,md"
