[project]
name = "mlda"
version = "2025.09"
description = "Машинное обучение и анализ данных"
authors = [
    {name = "askras",email = "askrasnikov@gmail.com"}
]
license = {text = "CC BY 4.0"}
readme = "README.md"
requires-python = "<3.14,>=3.11"
dependencies = [
    "category-encoders (>=2.8.1,<3.0.0)",
    "imbalanced-learn (>=0.14.0,<0.15.0)",
    "imutils (>=0.5.4,<0.6.0)",
    "ipympl (>=0.9.7,<0.10.0)",
    "ipython (>=9.5.0,<10.0.0)",
    "itables (>=2.4.5,<3.0.0)",
    "jupyter-tikz (>=0.5.6,<0.6.0)",
    "jupyterlab (>=4.4.6,<5.0.0)",
    "jupyterlab-rise (>=0.43.1,<0.44.0)",
    "jupytext (>=1.17.3,<2.0.0)",
    "keras (>=3.11.3,<4.0.0)",
    "lightgbm (>=4.6.0,<5.0.0)",
    "livelossplot (>=0.5.6,<0.6.0)",
    "markdown (>=3.8.2,<4.0.0)",
    "matplotlib (>=3.10.5,<4.0.0)",
    "mglearn (>=0.2.0,<0.3.0)",
    "mlxtend (>=0.23.4,<0.24.0)",
    "nbconvert (>=7.16.6,<8.0.0)",
    "notebook (>=7.4.5,<8.0.0)",
    "numexpr (>=2.11.0,<3.0.0)",
    "numpy (>=2.3.2,<3.0.0)",
    "openml (>=0.15.1,<0.16.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "pandas-datareader (>=0.10.0,<0.11.0)",
    "plotly (>=6.3.0,<7.0.0)",
    "scikit-learn (>=1.7.1,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "tensorflow (>=2.20.0,<3.0.0)",
    "torch (>=2.8.0,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "xgboost (>=3.0.4,<4.0.0)",
    "beautifulsoup4 (>=4.13.5,<5.0.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "streamlit (>=1.49.0,<2.0.0)"
    # tf-keras
    # tensorflow-model-optimization
    # opencv-python
]


[tool.poetry.group.dev.dependencies]
poetry-exec-plugin = "^1.0.1"
poetry-plugin-export = "^1.9.0"
poetry-plugin-shell = "^1.0.1"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
package-mode = false


[tool.jupytext]
formats = "ipynb,md"


[tool.poetry-exec-plugin.commands]
spyder = """
spyder --workdir=./ --window-title bmstu_machinelearning --project ./ --conf-dir ./.config/spyder-py3
"""

freeze = "poetry export --format requirements.txt --output requirements.txt --without-hashes"

jupyter = """
export JUPYTERLAB_SETTINGS_DIR=./.jupyterlab_config/user-settings
export JUPYTERLAB_WORKSPACES_DIR=./.jupyterlab_config/workspaces
python -m jupyter lab --allow-root --NotebookApp.token='' --NotebookApp.password=''
"""
